--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
-# Binaries for programs and plugins
+# vs code
+.vscode
+
+# idea
+*.iml
+.idea/
+idea/
+
+# eclipse
+.project
+.classpath
+.settings
+.factorypath
+target/
+
+# golang
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
